# NLP_Cusomer_Enhancement

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  requirements.txt  setup.cfg
demo/: V1_demo.ipynb  V1_demo_UI.py  V1_demo_UI_real_time.py  test.py
resources/call-center-sample-en_US/: en_US_7a4f56d7-9aca-4ed5-96b9-9c9c36b8a3ac.json
resources/input_text/: sample.txt  textqueries.xlsx
unified_desktop/: __init__.py
unified_desktop/core/utils/: device.py  logging.py
unified_desktop/pipelines/: __init__.py  asr.py  base.py  intent.py  keyword.py  keywords.py  keywords2.py  sentiment.py  ser.py  summarization.py
unified_desktop/services/: __init__.py  service_content_evaluator.py  service_transcriber.py
