[metadata]
name = Unified-Desktop
version = 0.0.0
description = An AI-based system for optimizing operations in Walgreens pharmacy and retail business.
long_description = file: README.rst,
keywords =
    ML
    NLP
python_requires = >=3.10
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    # Linting libraries
    black == 23.9.1
    flake8 == 6.1.0
    isort == 5.12.0
    mypy == 1.6.0
    nbQA==1.7.0
    nbstripout==0.6.1
    pre-commit == 3.5.0
    pre-commit-hooks==4.5.0
    # Type stubs for standard library
    pandas-stubs==2.0.3.230814
    types-beautifulsoup4
    types-Pillow
    types-PyYAML
    types-requests
    types-setuptools
    types-tabulate
    types-toml
    types-tqdm
    types-typed-ast
    # Development dependencies
    ipdb
    ipython
    ipywidgets
